# perf-compiler-learning

./: .gitignore  CMakeLists.txt  CUDA-OPERATORS-COMPLETION-REPORT.md  README.md
01-algorithms/: README.md
01-algorithms/cpp-leetcode/: README.md  problem-template.md
01-algorithms/cpp-numerical/: CMakeLists.txt  README.md  V5-analysis.md  method-template.md
01-algorithms/cpp-numerical/.build/: adams_bashforth4  adaptive_simpson  aitken_fixed_point  backward_euler  bessel_j  box_muller  cholesky  complex_division  complex_exp  complex_log  composite_simpson  composite_trapezoidal  conjugate_gradient  correlation_analysis  error_function  fft  fourier_series  gamma_lanczos  gauss_legendre_quadrature  gauss_seidel_sor  gaussian_elimination  golden_section_search  hermite_interpolation  hessenberg_reduction  incomplete_beta  inverse_iteration  jacobi_eigen  jacobi_iteration  legendre_polynomials  linear_congruential_generator  linear_regression  local_lagrange  lu_decomposition  matrix_inverse  monte_carlo_integration  multiple_linear_regression  natural_cubic_spline  nelder_mead  neville_interpolation  newton_secant  (+12 more)
01-algorithms/cpp-numerical/01-polynomials/: README.md  polynomial_division.cpp  polynomial_horner.cpp  polynomial_multiply.cpp
01-algorithms/cpp-numerical/02-complex-arithmetic/: README.md  complex_division.cpp  complex_exp.cpp  complex_log.cpp
01-algorithms/cpp-numerical/03-random-numbers/: README.md  box_muller.cpp  linear_congruential_generator.cpp  normal_statistics.cpp
01-algorithms/cpp-numerical/04-matrix-operations/: README.md  cholesky.cpp  lu_decomposition.cpp  matrix_inverse.cpp  qr_decomposition.cpp
01-algorithms/cpp-numerical/05-eigen-analysis/: README.md  hessenberg_reduction.cpp  inverse_iteration.cpp  jacobi_eigen.cpp  power_iteration.cpp  qr_iteration.cpp
01-algorithms/cpp-numerical/06-linear-systems/: README.md  conjugate_gradient.cpp  gauss_seidel_sor.cpp  gaussian_elimination.cpp  jacobi_iteration.cpp  tridiagonal_solver.cpp
01-algorithms/cpp-numerical/07-nonlinear-equations/: README.md  aitken_fixed_point.cpp  newton_secant.cpp
01-algorithms/cpp-numerical/08-interpolation-approximation/: README.md  hermite_interpolation.cpp  local_lagrange.cpp  natural_cubic_spline.cpp  neville_interpolation.cpp
01-algorithms/cpp-numerical/09-numerical-integration/: README.md  adaptive_simpson.cpp  composite_simpson.cpp  composite_trapezoidal.cpp  gauss_legendre_quadrature.cpp  monte_carlo_integration.cpp  romberg_integration.cpp
01-algorithms/cpp-numerical/10-ordinary-differential-equations/: README.md  adams_bashforth4.cpp  backward_euler.cpp  ode_methods.cpp  runge_kutta4.cpp
01-algorithms/cpp-numerical/11-data-processing/: README.md  correlation_analysis.cpp  linear_regression.cpp  multiple_linear_regression.cpp
01-algorithms/cpp-numerical/12-optimization/: README.md  golden_section_search.cpp  nelder_mead.cpp
01-algorithms/cpp-numerical/13-transforms-filters/: README.md  fft.cpp  fourier_series.cpp
01-algorithms/cpp-numerical/14-special-functions/: README.md  bessel_j.cpp  error_function.cpp  gamma_lanczos.cpp  incomplete_beta.cpp  legendre_polynomials.cpp  normal_cdf.cpp
02-kernels/: QUICK-REFERENCE.md  README.md
02-kernels/arch/: branch_divergence_32.cu  branch_divergence_8.cu
02-kernels/cuda-operators/: OPERATORS-INDEX.md  PROJECT-SUMMARY.md  README.md  operator-template.md
02-kernels/cuda-operators/00-foundations/: 01-memory-and-launch.md  02-reduction-and-normalization.md  03-validation-and-benchmarking.md  04-fusion-and-roadmap.md  README.md
02-kernels/cuda-operators/01-element-wise-ops/: README.md
02-kernels/cuda-operators/02-linear-algebra/: README.md
02-kernels/cuda-operators/03-convolution/: README.md
02-kernels/cuda-operators/04-pooling-normalization/: README.md
02-kernels/cuda-operators/05-tensor-ops/: README.md
02-kernels/cuda-operators/06-reduction/: README.md
02-kernels/cuda-operators/07-comparison-select/: README.md
02-kernels/cuda-operators/08-rnn-special/: README.md
03-compiler/: README.md
03-compiler/llvm-pass/: README.md  pass-template.md
04-templates/: README.md
04-templates/cpp/: leetcode_solution.cpp
04-templates/cuda/: kernel_template.cu
04-templates/llvm/: pass_skeleton.cpp
05-notes/: compiler-optimization.md  cpp-performance.md  cuda-memory-model.md  numerical-stability.md
06-benchmarks/: README.md
07-progress/: roadmap.md  todo.md  weekly-log.md
08-pytorch/: 2-gpu-hardware.md  4-performance.md  6-inference.md  8-advanced.md  README.md
08-pytorch/1-basics/: 1-basics.md
08-pytorch/3-custom-extension/: 3-custom-extension.md
08-pytorch/5-distributed/: 5-distributed.md
08-pytorch/7-ecosystem/: 7-ecosystem.md
09-novel/: eml_sheffer  eml_sheffer.cpp
scripts/: README.md
(+157 files in other folders)
