cmake_minimum_required(VERSION 3.16)
project(cpp_numerical_examples LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

function(add_numerical_example target source)
    add_executable(${target} ${source})
    target_compile_options(${target} PRIVATE -O2)
endfunction()

add_numerical_example(polynomial_horner 01-polynomials/polynomial_horner.cpp)
add_numerical_example(polynomial_division 01-polynomials/polynomial_division.cpp)
add_numerical_example(polynomial_multiply 01-polynomials/polynomial_multiply.cpp)
add_numerical_example(complex_exp 02-complex-arithmetic/complex_exp.cpp)
add_numerical_example(complex_log 02-complex-arithmetic/complex_log.cpp)
add_numerical_example(complex_division 02-complex-arithmetic/complex_division.cpp)
add_numerical_example(box_muller 03-random-numbers/box_muller.cpp)
add_numerical_example(linear_congruential_generator 03-random-numbers/linear_congruential_generator.cpp)
add_numerical_example(normal_statistics 03-random-numbers/normal_statistics.cpp)
add_numerical_example(cholesky 04-matrix-operations/cholesky.cpp)
add_numerical_example(qr_decomposition 04-matrix-operations/qr_decomposition.cpp)
add_numerical_example(lu_decomposition 04-matrix-operations/lu_decomposition.cpp)
add_numerical_example(matrix_inverse 04-matrix-operations/matrix_inverse.cpp)
add_numerical_example(jacobi_eigen 05-eigen-analysis/jacobi_eigen.cpp)
add_numerical_example(power_iteration 05-eigen-analysis/power_iteration.cpp)
add_numerical_example(qr_iteration 05-eigen-analysis/qr_iteration.cpp)
add_numerical_example(hessenberg_reduction 05-eigen-analysis/hessenberg_reduction.cpp)
add_numerical_example(inverse_iteration 05-eigen-analysis/inverse_iteration.cpp)
add_numerical_example(gaussian_elimination 06-linear-systems/gaussian_elimination.cpp)
add_numerical_example(conjugate_gradient 06-linear-systems/conjugate_gradient.cpp)
add_numerical_example(tridiagonal_solver 06-linear-systems/tridiagonal_solver.cpp)
add_numerical_example(jacobi_iteration 06-linear-systems/jacobi_iteration.cpp)
add_numerical_example(gauss_seidel_sor 06-linear-systems/gauss_seidel_sor.cpp)
add_numerical_example(aitken_fixed_point 07-nonlinear-equations/aitken_fixed_point.cpp)
add_numerical_example(newton_secant 07-nonlinear-equations/newton_secant.cpp)
add_numerical_example(local_lagrange 08-interpolation-approximation/local_lagrange.cpp)
add_numerical_example(neville_interpolation 08-interpolation-approximation/neville_interpolation.cpp)
add_numerical_example(hermite_interpolation 08-interpolation-approximation/hermite_interpolation.cpp)
add_numerical_example(natural_cubic_spline 08-interpolation-approximation/natural_cubic_spline.cpp)
add_numerical_example(romberg_integration 09-numerical-integration/romberg_integration.cpp)
add_numerical_example(adaptive_simpson 09-numerical-integration/adaptive_simpson.cpp)
add_numerical_example(composite_simpson 09-numerical-integration/composite_simpson.cpp)
add_numerical_example(gauss_legendre_quadrature 09-numerical-integration/gauss_legendre_quadrature.cpp)
add_numerical_example(composite_trapezoidal 09-numerical-integration/composite_trapezoidal.cpp)
add_numerical_example(monte_carlo_integration 09-numerical-integration/monte_carlo_integration.cpp)
add_numerical_example(ode_methods 10-ordinary-differential-equations/ode_methods.cpp)
add_numerical_example(runge_kutta4 10-ordinary-differential-equations/runge_kutta4.cpp)
add_numerical_example(backward_euler 10-ordinary-differential-equations/backward_euler.cpp)
add_numerical_example(adams_bashforth4 10-ordinary-differential-equations/adams_bashforth4.cpp)
add_numerical_example(linear_regression 11-data-processing/linear_regression.cpp)
add_numerical_example(multiple_linear_regression 11-data-processing/multiple_linear_regression.cpp)
add_numerical_example(correlation_analysis 11-data-processing/correlation_analysis.cpp)
add_numerical_example(nelder_mead 12-optimization/nelder_mead.cpp)
add_numerical_example(golden_section_search 12-optimization/golden_section_search.cpp)
add_numerical_example(fourier_series 13-transforms-filters/fourier_series.cpp)
add_numerical_example(fft_example 13-transforms-filters/fft.cpp)
add_numerical_example(bessel_j 14-special-functions/bessel_j.cpp)
add_numerical_example(incomplete_beta 14-special-functions/incomplete_beta.cpp)
add_numerical_example(gamma_lanczos 14-special-functions/gamma_lanczos.cpp)
add_numerical_example(error_function 14-special-functions/error_function.cpp)
add_numerical_example(legendre_polynomials 14-special-functions/legendre_polynomials.cpp)
add_numerical_example(normal_cdf 14-special-functions/normal_cdf.cpp)
